fix: fix navbar's invisible, fix product, fix map error in path product

--- a/public/assets/css/templatemo-sixteen.css
+++ b/public/assets/css/templatemo-sixteen.css
@@ -205,8 +205,8 @@ a.filled-button:hover {
 
 /* Header Style */
 header {
-	/* position: absolute;
-	z-index: 99999; */
+	/* position: absolute; */
+	z-index: 99999;
 	width: 100%;
 	height: 80px;
 	background-color: #232323;
@@ -218,6 +218,11 @@ header {
 header .navbar {
 	padding: 17px 0px;
 }
+
+.bg-dark {
+	background-color: #232323 !important;
+}
+
 .background-header .navbar {
 	padding: 17px 0px;
 }
@@ -228,17 +233,17 @@ header .navbar {
 	box-shadow: 0px 1px 10px rgba(0,0,0,0.1);
 }
 .background-header .navbar-brand h2 {
-	color: #121212!important;
+	/* color: #121212!important; */
 }
 .background-header .navbar-nav a.nav-link {
-	color: #1e1e1e!important;
+	/* color: #1e1e1e!important; */
 }
 .background-header .navbar-nav .nav-link:hover,
 .background-header .navbar-nav .active>.nav-link,
 .background-header .navbar-nav .nav-link.active,
 .background-header .navbar-nav .nav-link.show,
 .background-header .navbar-nav .show>.nav-link {
-	color: #f33f3f!important;
+	/* color: #f33f3f!important; */
 }
 .navbar .navbar-brand {
 	float: 	left;
