--- a/src/components/Contents/Banner/Banner.css
+++ b/src/components/Contents/Banner/Banner.css
@@ -17,3 +17,15 @@
   background-color: rgb(223, 26, 92);
   transition: 0.5s;
 }
+
+.carousel .carousel-item {
+  height: 550px;
+}
+
+/* .carousel-item img {
+    position: absolute;
+    object-fit:cover;
+    top: 0;
+    left: 0;
+    min-height: 500px;
+} */
